--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 	<link rel = "stylesheet" href = "https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap-theme.min.css">
 	<script src = "https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
 	
-	<link rel = "stylesheet" href = "stylesheet.css">
+	<link rel = "stylesheet" href = "css/stylesheet.css">
 
 	<script src= "scripts/checkpc.js"></script>
 	<script src= "scripts/bootbox.js"></script>
